# TemplateTCPServer

./: .gitignore  CMakeLists.txt  README.md
cmake/: toolchain-mingw64.cmake
scripts/: build-linux.sh  build-windows-mingw-from-linux.sh  build-windows.bat
src/: CommandDispatcher.cpp  CommandDispatcher.h  EcgGenerator.cpp  EcgGenerator.h  ICommandHandler.h  Json.cpp  Json.h  Protocol.cpp  Protocol.h  Server.cpp  Server.h  main.cpp
